--- a/Views/Home/Crossovers.cshtml
+++ b/Views/Home/Crossovers.cshtml
@@ -13,7 +13,7 @@
         <h3 style="text-align: center">Flash vs Arqueiro</h3>
 
         <div class="card" style="width: 40%;">
-            <img class="card-img-top;" src="https://i1.wp.com/reinodeseries.com/wp-content/uploads/2014/12/Flarrow1.jpg?fit=558%2C314" alt="123 milhas" />
+            <img class="card-img-top;" src="~/imagens/Flarrow1.jpg" alt="123 milhas" />
             <div class="card-body">
                 <h5 class="card-title" style="text-align:center">Arrow Temporada 4 - Ep.8 <br /> The Flash Temporada 2 - Episódio 8</h5>
             </div>
@@ -29,9 +29,9 @@
         <h3 style="text-align: center">Heróis Juntando Forças</h3>
 
         <div class="card" style="width: 40%;">
-            <img class="card-img-top;" src="https://i0.wp.com/41.media.tumblr.com/436c467dc24e838509ceca0ad7197c69/tumblr_nypd5cnT3w1tbsjlbo1_1280.png" alt="123 milhas" />
+            <img class="card-img-top;" src="~/imagens/juntandoForcas.jpg" alt="123 milhas" />
             <div class="card-body">
-                <h5 class="card-title" style="text-align:center">Arrow Temporada 3 - Episódio 8 <br /> The Flash Temporada 1 - Episódio 8</h5>
+                <h5 class="card-title" style="text-align:center; color: black">Arrow Temporada 3 - Episódio 8 <br /> The Flash Temporada 1 - Episódio 8</h5>
             </div>
         </div>
 
@@ -46,9 +46,9 @@
         <h3 style="text-align: center">Os Melhores do Mundo</h3>
 
         <div class="card" style="width: 40%;">
-            <img class="card-img-top;" src="https://tvovermind.com/wp-content/uploads/2016/03/Supergirl-0118.jpg" alt="123 milhas" />
+            <img class="card-img-top;" src="~/imagens/MelhoresdoMundo.jpg" alt="123 milhas" />
             <div class="card-body">
-                <h5 class="card-title" style="text-align:center">Supergirl Temporada 1 - Episódio 18</h5>
+                <h5 class="card-title" style="text-align:center; color: black">Supergirl Temporada 1 - Episódio 18</h5>
             </div>
         </div>
 
@@ -66,9 +66,9 @@
     <h3 style="text-align: center">Invasão!</h3>
     <div class="col">
         <div class="card" style="width: 100%;">
-            <img class=" card-img-top ;img-fluid" src="https://br.web.img2.acsta.net/newsv7/16/11/17/13/49/509004.jpg" alt="123 milhas" />
+            <img class=" card-img-top ;img-fluid" src="~/imagens/invasao.jpg" alt="123 milhas" />
             <div class="card-body">
-                <h5 class="card-title" style="text-align:center">Arrow Temporada 5 - Episódio 18 <br />The Flash Temporada 3 - Episódio 8 <br />Lendas do Amanhã Temporada 2 - Episódio 7</h5>
+                <h5 class="card-title" style="text-align:center; color: black">Arrow Temporada 5 - Episódio 18 <br />The Flash Temporada 3 - Episódio 8 <br />Lendas do Amanhã Temporada 2 - Episódio 7</h5>
             </div>
         </div>
     </div>
@@ -92,7 +92,7 @@
 
     <div class="col">
         <div class="card" style="width: 100%;">
-            <img class="img-fluid" src="https://4.bp.blogspot.com/-WfT1__gjeuI/WNkcakODqII/AAAAAAAAlHk/ILykOj0uWlEFgWygNURbTxSp3_LfzI_hQCLcB/s400/dueto2.jpg" alt="123 milhas" />
+            <img class="img-fluid" src="~/imagens/DuetoKara.jpg" alt="123 milhas" />
         </div>
     </div>
 
@@ -110,7 +110,7 @@
 
     <div class="col">
         <div class="card" style="width: 100%;">
-            <img class="img-fluid" src="https://1.bp.blogspot.com/-StXyUXjHgJU/WNkcZc5a4RI/AAAAAAAAlHc/J-qUB7dCz0Y_LACDfJs-vGkklVxiIzvbQCLcB/s400/dueto3.jpg" alt="123 milhas" />
+            <img class="img-fluid" src="~/imagens/DuetoBarry.jpg" alt="123 milhas" />
         </div>
     </div>
 </div>
@@ -126,9 +126,9 @@
         </p>
 
         <div class="card" style="width: 70%;">
-            <img class="card-img-top;" src="https://i.pinimg.com/originals/21/3d/80/213d80a31c8ca329e33fa6e53d7bc788.jpg" alt="123 milhas" />
+            <img class="card-img-top;" src="~/imagens/TerraX.jpg" alt="123 milhas" />
             <div class="card-body">
-                <h5 class="card-title;" style="text-align:center">Supergirl Temporada 3 - Episódio 8 <br />Arrow Temporada 6 - Episódio 8 <br />The Flash Temporada 4 - Episódio 8 <br />Lendas do Amanhã Temporada 3 - Episódio 8</h5>
+                <h5 class="card-title;" style="text-align:center; color: black">Supergirl Temporada 3 - Episódio 8 <br />Arrow Temporada 6 - Episódio 8 <br />The Flash Temporada 4 - Episódio 8 <br />Lendas do Amanhã Temporada 3 - Episódio 8</h5>
             </div>
         </div>
     </div>
@@ -145,9 +145,9 @@
         </p>
 
         <div class="card" style="width: 70%;">
-            <img class="card-img-top;" src="http://oyster.ignimgs.com/wordpress/stg.ign.com/2018/10/DppDS7hU8AAUSG0.jpg" alt="123 milhas" />
+            <img class="card-img-top;" src="~/imagens/Elseworlds.jpg" alt="123 milhas" />
             <div class="card-body">
-                <h5 class="card-title;" style="text-align:center">The Flash Temporada 5 - Episódio 9 <br />Arrow Temporada 7 - Episódio 9 <br />Supergirl Temporada 4 - Episódio 9</h5>
+                <h5 class="card-title;" style="text-align:center; color: black">The Flash Temporada 5 - Episódio 9 <br />Arrow Temporada 7 - Episódio 9 <br />Supergirl Temporada 4 - Episódio 9</h5>
             </div>
         </div>
     </div>
@@ -172,9 +172,9 @@
 
     </div>
     <div class="card" style="width: 100%;">
-        <img class="card-img-top; img-fluid;" src="https://1.bp.blogspot.com/-sUVtyeC5w3E/Xerdj4tfgSI/AAAAAAAAg7c/QnR0mLDbkT0L5mywH_xfZUjP8JK5wDXOgCNcBGAsYHQ/s1600/crisis-on-infinite-earths-episode-guide-arrow-the-flash-supergirl-batwoman-legends-of-tomorrow-Armadura-Nerd.webp" alt="123 milhas" />
+        <img class="card-img-top; img-fluid;" src="~/imagens/banner.jpg" alt="123 milhas" />
         <div class="card-body">
-            <h5 class="card-title" style="text-align:center">Supergirl Temporada 5 - Episódio 9 <br />Batwoman Temporada 1 - Episódio 9 <br />The Flash Temporada 6 - Episódio 9<br />Arrow Temporada 8 - Episódio 8<br />Lendas do Amanhã Temporada 5 - Episódio especial </h5>
+            <h5 class="card-title" style="text-align:center; color: black">Supergirl Temporada 5 - Episódio 9 <br />Batwoman Temporada 1 - Episódio 9 <br />The Flash Temporada 6 - Episódio 9<br />Arrow Temporada 8 - Episódio 8<br />Lendas do Amanhã Temporada 5 - Episódio especial </h5>
         </div>
     </div>
 </div>
