--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -11,7 +11,7 @@
         Baseado nos personagens da DC Comics, o Arrowverso é uma franquia de televisão.
     </p>
     <div class="col">
-        <br /><br /><br />
+        <br /><br />
         <p style="text-align: justify; font-family:Arial">
             O canal americano The CW começou a exibir Arqueiro em 2012. Devido ao seu sucesso, o universo foi expandido com Flash.
             Com o multiverso introduzido, isto abriu portas para novos territórios, com diversas séries da DC acontecendo no multiverso e,
@@ -48,6 +48,6 @@
         </p>
     </div>
     <div class="col">
-        <img class="card-img-top;" src="https://i.pinimg.com/originals/6b/d5/5c/6bd55c9ef649fb1d66c6bdf166a49d70.jpg" alt="123 milhas" sstyle="border: 10px, 10px, 10px, 10px" ; />
+        <img class="card-img-top;" src="~/imagens/posterIfinitasTerras.jpg" alt="123 milhas" sstyle="border: 10px, 10px, 10px, 10px" ; />
     </div>
 </div>
