--- a/Views/Home/NovaFase.cshtml
+++ b/Views/Home/NovaFase.cshtml
@@ -28,7 +28,7 @@
 </p>
 
 <div class="img" style="width: 60%; justify-content: center;">
-	<img src="https://static3.srcdn.com/wordpress/wp-content/uploads/2019/11/Green-Arrow-and-the-Canaries.jpg?q=50&fit=crop&w=740&h=370" style="justify-content: center;" />
+	<img src="~/imagens/Green-Arrow-and-the-Canaries_1.jpg" style="justify-content: center;" />
 </div>
 <br />
 
@@ -61,7 +61,7 @@
 	</p>
 </div>
 <div class="img" style="width: 60%; justify-content: center;">
-	<img src="https://static3.srcdn.com/wordpress/wp-content/uploads/2020/01/Crisis-On-Infinite-Earths-Spectre-Poster-Featured-Image.jpg?q=50&fit=crop&w=740&h=370" style="justify-content: center;" />
+	<img src="~/imagens/Crisis-On-Infinite-Earths-Spectre-Poster-Featured-Image.jpg" style="justify-content: center;" />
 </div>
 <br />
 
@@ -92,7 +92,7 @@ Terras ainda continuará sendo exibido devido às novas mudanças – principalm
 </div>
 
 <div class="img" style="width: 60%; justify-content: center;">
-	<img src="https://static3.srcdn.com/wordpress/wp-content/uploads/2019/11/Arrowverse-Crisis-Infinite-Earths-Full-Cast-Supergirl.jpg?q=50&fit=crop&w=740&h=370" style="justify-content: center;" />
+	<img src="~/imagens/Arrowverse-Crisis-Infinite-Earths-Full-Cast-Supergirl.jpg" style="justify-content: center;" />
 </div>
 
 <br />
@@ -133,7 +133,7 @@ Mesmo a adição de Stargirl do DC Universe na CW pode significar um novo capít
 </div>
 
 <div class="img" style="width: 60%; justify-content: center;">
-	<img src="https://static0.srcdn.com/wordpress/wp-content/uploads/2020/01/Supergirl-Crisis-Part-1.jpg?q=50&fit=crop&w=740&h=370" style="justify-content: center;" />
+	<img src="~/imagens/Supergirl-Crisis-Part-1.jpg" style="justify-content: center;" />
 </div>
 
 <br />
