--- a/Views/Home/Privacy.cshtml
+++ b/Views/Home/Privacy.cshtml
@@ -32,7 +32,7 @@
 	</div>
 	<div class="col">
 		<div class="card" style="width: 100%;">
-			<img class="card-img-top" src="https://upload.wikimedia.org/wikipedia/pt/thumb/8/8c/Arrow_logotipo.png/250px-Arrow_logotipo.png" alt="123 milhas" />
+			<img class="card-img-top" src="~/imagens/Arrow_logotipo.png" alt="123 milhas" />
 		</div>
 	</div>
 </div>
@@ -43,7 +43,7 @@
 <div class="row">
 	<div class="col">
 		<div class="card" style="width: 100%;">
-			<img class="card-img-top" src="https://upload.wikimedia.org/wikipedia/pt/thumb/d/dd/The_Flash_logo.png/250px-The_Flash_logo.png" alt="123 milhas" />
+			<img class="card-img-top" src="~/imagens/The_Flash_logo.png" alt="123 milhas" />
 		</div>
 	</div>
 	<div class="col">
@@ -75,7 +75,7 @@
 	</div>
 	<div class="col">
 		<div class="card" style="width: 100%;">
-			<img class="card-img-top" src="https://upload.wikimedia.org/wikipedia/pt/thumb/e/e2/Supergirl_logo.png/250px-Supergirl_logo.png" alt="123 milhas" />
+			<img class="card-img-top" src="~/imagens/Supergirl_logo.png" alt="123 milhas" />
 		</div>
 	</div>
 </div>
@@ -86,7 +86,7 @@
 <div class="row">
 	<div class="col">
 		<div class="card" style="width: 100%;">
-			<img class="card-img-top" src="https://upload.wikimedia.org/wikipedia/pt/thumb/c/c7/Legends_of_Tomorrow_logo.png/250px-Legends_of_Tomorrow_logo.png" alt="123 milhas" />
+			<img class="card-img-top" src="~/imagens/Legends_of_Tomorrow_logo.png" alt="123 milhas" />
 		</div>
 	</div>
 	<div class="col">
@@ -116,7 +116,7 @@
 	</div>
 	<div class="col">
 		<div class="card" style="width: 100%;">
-			<img class="card-img-top" src="https://upload.wikimedia.org/wikipedia/pt/thumb/e/e5/Black_Lightning_logo.png/250px-Black_Lightning_logo.png" alt="123 milhas" />
+			<img class="card-img-top" src="~/imagens/Black_Lightning_logo.png" alt="123 milhas" />
 		</div>
 	</div>
 </div>
@@ -127,7 +127,7 @@
 <div class="row">
 	<div class="col">
 		<div class="card" style="width: 100%;">
-			<img class="card-img-top" src="https://upload.wikimedia.org/wikipedia/pt/thumb/c/c3/Batwoman_TV_series_logo.png/250px-Batwoman_TV_series_logo.png" alt="123 milhas" />
+			<img class="card-img-top" src="~/imagens/Batwoman_TV_series_logo.png" alt="123 milhas" />
 		</div>
 	</div>
 	<div class="col">
