--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -11,7 +11,7 @@
 <body>
 	<header style="position:center">
 		<div class="text-center">
-			<img src="https://1.bp.blogspot.com/-sUVtyeC5w3E/Xerdj4tfgSI/AAAAAAAAg7c/QnR0mLDbkT0L5mywH_xfZUjP8JK5wDXOgCNcBGAsYHQ/s1600/crisis-on-infinite-earths-episode-guide-arrow-the-flash-supergirl-batwoman-legends-of-tomorrow-Armadura-Nerd.webp" class="img-fluid" alt="Imagem responsiva">
+			<img src="~/imagens/banner.jpg" class="img-fluid" alt="Imagem responsiva">
 		</div>
 		<nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
 			<div class="container-fluid">
@@ -21,21 +21,22 @@
 					<span class="navbar-toggler-icon"></span>
 				</button>
 				<div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-					<ul class="navbar-nav flex-grow-1">
+					<ul class="navbar-nav flex-grow-1 nav justify-content-center">
 						<li class="nav-item">
-							<a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Início</a>
+							<a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index" style="border:double"><b>Início</b></a>
+							
 						</li>
 						<li class="nav-item">
-							<a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Séries</a>
+							<a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy" style="border:double"><b>Séries</b></a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Crossovers">Crossovers</a>
+							<a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Crossovers" style="border:double"><b>Crossovers</b></a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="QuemMais">Quem mais participou?</a>
+							<a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="QuemMais" style="border:double"><b>Quem mais participou?</b></a>
 							</li>
 						<li class="nav-item">
-							<a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="NovaFase">Nova Fase</a>
+							<a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="NovaFase" style="border:double"><b>Nova Fase</b></a>
 						</li>
 						
 					</ul>
@@ -49,8 +50,8 @@
 		</main>
 	</div>
 
-	<footer class="border-top footer text-muted">
-		<div class="container">
+	<footer class="border-top footer text-muted" style="text-align:center">
+		<div class="container" style="color: lightgray">
 			&copy; 2022 - Arrowverso - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
 		</div>
 	</footer>
